Permit other reader types.